Bug 1552789 - Check NS_FRAME_FORCE_DISPLAY_LIST_DESCEND_INTO flag for every line r=mattwoodrow a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D31865